styles/main.css
/* import both lato and raleway in light, regular, and bold (+ italics) */
@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i|Raleway:200,200i,300,300i,400,400i,700,700i&subset=latin-ext');

/* import homestead font for primary mega-headings */
@font-face {
	font-family: 'homestead';
	src: url('../fonts/homestead/homestead-regular.ttf') format('truetype');
	font-weight: normal;
}

html, body {
	font-size: 150%;
	background-color: #111;

	height: 0;
	width: 100%;
	max-width: 100%;
	min-height: 100%;

	padding: 0;
	outline: 0;
	margin:  0;
}

#hero {
	height: 100%;
	width: 100%;

	position: absolute;
	background-position: top left;
	background-size: cover;
	background-image: url("../images/hero/blur-board-game-cards-776654.jpg");
}

#hero > * {
	text-align: center;
	mix-blend-mode: difference;
	text-shadow: 0 0 4px white;
}

.centered {
	display: flex;
	flex-direction: column;
	justify-content: top;
	align-items: center;
}

h1 {
	font-family: 'homestead';
	font-size: 4em;
	font-weight: 400;

	margin:
		0.375em 0
		0.25em 0;
}

h2 {
	font-family: 'raleway';
	font-size: 3em;
	font-weight: 200;

	margin:
		0.25em 0
		0.25em 0;
}

h3 {
	font-family: 'raleway';
	font-size: 2em;
	font-weight: 300;

	margin:
		0.25em 0
		0.25em 0;
}

p {
	font-family: 'lato';
	font-size: 1em;
	font-weight: 400;

	margin:
		0.25em 0
		0.25em 0;
}

a {
	text-decoration-line: underline;
	text-decoration-style: solid;
	color: inherit;
}

a:visited {
	text-decoration-line: underline;
	text-decoration-style: solid;
}

a:hover {
	text-decoration-line: underline overline;
	text-decoration-style: solid;
}


a:active {
	text-decoration-line: none;
	text-decoration-style: none;
}

h1.lite {
	color: seashell;
}
h1.dark {
	color: #000A11;
}
h2.lite {
	color: navajowhite;
}
h2.dark {
	color: #00102A;
}
h3.lite {
	color: papayawhip;
}
h3.dark {
	color: #002152;
}
p.lite {
	color: papayawhip;
}
p.dark {
	color: #002152;
}
.lite a:hover, .lite a:active {
	color: seashell;
}
.dark a:hover, .dark a:active {
	color: seashell;
}

/*
h4 {
	font-size: 2em;
}

h5 {
	font-size: 1.5em;
}

h6 {
	font-size: 1.5em;
}
*/

/*Horizontal Sliding*/
.slidingHorizontal{
	display: flex;
	align-items: center;
	position: initial;
	overflow: hidden;
}

.slidingHorizontal > li {
	animation: leftToRight 24s linear infinite 0s;
	opacity: 0;
	text-align: center;
	position: absolute;
}

.slidingHorizontal > li:nth-child(1) {
	animation-delay: -2s;
}

.slidingHorizontal > li:nth-child(2) {
	animation-delay: 2s;
}

.slidingHorizontal > li:nth-child(3) {
	animation-delay: 6s;
}

.slidingHorizontal > li:nth-child(4) {
	animation-delay: 10s;
}

.slidingHorizontal > li:nth-child(5) {
	animation-delay: 14s;
}

.slidingHorizontal > li:nth-child(6) {
	animation-delay: 18s;
	position: initial;
}

@keyframes leftToRight{
	  0% { opacity: 0; }
	  5% { opacity: 0; transform: translateX(-8em); }
	 10% { opacity: 1; transform: translateX(0); }
	 23% { opacity: 1; transform: translateX(0); }
	 28% { opacity: 0; transform: translateX( 8em); }
	 80% { opacity: 0; }
	100% { opacity: 0; }
/* cycles in 3 seconds */
}

